# xdg-desktop-portal-phosh

./: .gitignore  .gitlab-ci.yml  HACKING.md  NEWS  README.md  meson.build
data/: meson.build  org.freedesktop.impl.portal.desktop.phosh.service.in  pmp.portal.in  xdg-desktop-portal-phosh.desktop.in.in  xdg-desktop-portal-phosh.service.in
debian/: changelog  control  copyright  rules  xdg-desktop-portal-phosh.install
po/: POTFILES.in  de.po  meson.build
src/: fc-monitor.c  meson.build  pmp-external-win.c  pmp-external-win.h  pmp-request.c  pmp-request.h  pmp-settings.c  pmp-settings.h  pmp-utils.c  pmp-utils.h  pmp-wallpaper-dialog.c  pmp-wallpaper-dialog.h  pmp-wallpaper-dialog.ui  pmp-wallpaper-preview.c  pmp-wallpaper-preview.h  pmp-wallpaper-preview.ui  pmp-wallpaper.c  pmp-wallpaper.h  pmp.gresources.xml  xdg-desktop-portal-phosh.c
